--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 {% for item in items %}
-    <h1>{{ item.name }}</h1>
-    <h2>{{ item.price }}</h2>
-    <img src="{{ item.image.url }}", width="200" alt="">
+    <div>
+        <h1>{{ item.name }}</h1>
+        <h2>{{ item.price }}</h2>
+        <img src="{{ item.image.url }}", width="200" alt="">
+    </div>
 {% endfor %}
 </body>
 </html>
