--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
     <div>
         <h1>{{ item.name }}</h1>
         <h2>{{ item.price }}</h2>
-        <img src="{{ item.image.url }}", width="200" alt="">
+        <img src="{{ item.image.url }}" width="200" alt="">
+        <h3>поцелуй мой писюн своими губами</h3>
     </div>
 {% endfor %}
 </body>
