--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,1 +1,6 @@
-/* slkfjskldgsldg pisa popa
+.item-grid {
+    width: 500px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+}
