--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,15 @@
     <title>Mainpage</title>
 </head>
 <body>
-{% for item in items %}
-    <div>
-        <h1>{{ item.name }}</h1>
-        <h2>{{ item.price }}</h2>
-        <img src="{{ item.image.url }}" width="200" alt="">
-        <h3>поцелуй мой писюн своими губами</h3>
+    <div class="item-grid">
+        {% for item in items %}
+            <div class="item">
+                <!--pisa-->
+                <h1>{{ item.name }}</h1>
+                <h2>{{ item.price }}</h2>
+                <img src="{{ item.image.url }}" width="200" alt="">
+            </div>
+        {% endfor %}
     </div>
-{% endfor %}
 </body>
 </html>
