--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
         {% for item in items %}
             <div class="item">
                 <!--pisa-->
+                <!--pisulka-->
                 <h1>{{ item.name }}</h1>
                 <h2>{{ item.price }}</h2>
                 <img src="{{ item.image.url }}" width="200" alt="">
