--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
             <div class="item">
                 <!--pisa-->
                 <h1>pisa</h1>
+                <h2>popa</h2>
+                <h3>pisa2</h3>
                 <h1>{{ item.name }}</h1>
                 <h2>{{ item.price }}</h2>
                 <img src="{{ item.image.url }}" width="200" alt="">
