pisunok final nahui ebal etu huynu

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
                 <h1>pisa</h1>
                 <h2>popa</h2>
                 <h3>pisa2</h3>
+                <h4>pisulka4</h4>
                 <h1>{{ item.name }}</h1>
                 <h2>{{ item.price }}</h2>
                 <img src="{{ item.image.url }}" width="200" alt="">
