--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,76 @@
 body {
-    padding: 20px;
+    background-color: black;
+    margin: 0;
+    padding: 0;
+}
+
+.header {
+    position: fixed;
+    top: 0;
+}
+
+.header-img {
+    position: relative;
+    z-index: 100;
+    width: 100vw;
+}
+
+.header img {
+    position: absolute;
+    width: 100vw;
+    left: -10px;
+    top: -3vw;
+    z-index: 100;
+    scale: 120%;
+}
+
+.header-logo {
+    position: absolute;
+    left: 0;
+    top: 3vw;
+    width: 100vw;
+    margin-top: 3vw;
+    z-index: 101;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+}
+
+.header-logo img {
+    height: 3vw;
 }
 
 .item-grid {
-    width: 500px;
+    width: 82vw;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 20px;
-    margin-left: 100px;
+    column-gap: 1.5vw;
+    margin-left: 9vw;
+    margin-top: 170px;
+}
+
+.item {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+    background-color: white;
+    border-radius: 20px;
+    padding: 15px;
+    height: 290px;
+}
+
+.item-img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    margin: 0;
+}
+
+.item h1,
+.item h2 {
+    margin: 0;
+    font-size: 1.2rem;
+    font-weight: 500;
 }
