--- a/templates/index.html
+++ b/templates/index.html
@@ -6,17 +6,24 @@
     <title>Mainpage</title>
 </head>
 <body>
+    <div class="header">
+        <div class="header-img">
+            <img src="/media/media/images/top_wave.svg" alt="">
+        </div>
+
+        <div class="header-logo">
+            <img src="/media/media/images/youtube-logo — копия.svg" alt="">
+        </div>
+    </div>
+
     <div class="item-grid">
         {% for item in items %}
             <div class="item">
-                <!--pisa-->
-                <h1>pisa</h1>
-                <h2>popa</h2>
-                <h3>pisa2</h3>
-                <h4>pisulka4</h4>
+                <div class="item-img">
+                    <img src="{{ item.image.url }}" width="200" alt="">
+                </div>
                 <h1>{{ item.name }}</h1>
                 <h2>{{ item.price }}</h2>
-                <img src="{{ item.image.url }}" width="200" alt="">
             </div>
         {% endfor %}
     </div>
