--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,6 +42,7 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 1.5vw;
     margin-left: 9vw;
+    margin-top: 20vw;
 }
 
 .item {
