--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
         {% for item in items %}
             <div class="item">
                 <div class="item-img">
-                    <img src="{{ item.image.url }}" width="200" alt="">
+                    <img src="{{ item.image.url }}" alt="">
                 </div>
                 <h1>{{ item.name }}</h1>
                 <h2>{{ item.price }}</h2>
