--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,7 +49,7 @@ body {
     display: flex;
     flex-direction: column;
     row-gap: 0.5rem;
-    background-color: white;
+    background-color: rgb(255, 0, 0);
     border-radius: 20px;
     padding: 15px;
     height: 290px;
