--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,7 +48,7 @@ body {
     display: flex;
     flex-direction: column;
     row-gap: 0.5rem;
-    background-color: rgb(255, 0, 0);
+    background-color: white;
     border-radius: 20px;
     padding: 15px;
     height: 290px;
@@ -68,9 +68,38 @@ body {
     width: 200px;
 }
 
-.item h1,
-.item h2 {
+.item-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+}
+
+.item-info button {
+    background-color: rgb(0, 0, 0);
+    color: white;
+    width: 6vw;
+    height: 4vw;
+    border: none;
+    border-radius: 30%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    opacity: 1;
+    transition: opacity 0.2s;
+    font-family: Atkinson Hyperlegible Mono, Arial;
+    cursor: pointer;
+}
+
+.item-info button:hover {
+    opacity: 0.7;
+}
+
+.item-info button:active {
+    opacity: 0.5;
+}
+
+.item-info h1,
+.item-info h2 {
     margin: 0;
     font-size: 1.2rem;
     font-weight: 500;
+    font-family: Atkinson Hyperlegible Mono, Arial;
 }
