--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Mainpage</title>
 </head>
 <body>
@@ -22,8 +25,15 @@
                 <div class="item-img">
                     <img src="{{ item.image.url }}" alt="">
                 </div>
-                <h1>{{ item.name }}</h1>
-                <h2>{{ item.price }}</h2>
+                <div class="item-info">
+                    <div>
+                        <h1>{{ item.name }}</h1>
+                        <h2>{{ item.price }}</h2>
+                    </div>
+                    <div>
+                        <button>Buy</button>
+                    </div>
+                </div>
             </div>
         {% endfor %}
     </div>
