--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,12 @@
         <div class="header-logo">
             <img src="/media/media/images/youtube-logo — копия.svg" alt="">
         </div>
+
+        <div class="cart-icon">
+            <button class="cart-button">
+                <img src="/media/media/images/shop-icon.svg" alt="">
+            </button>
+        </div>
     </div>
 
     <div class="item-grid">
