--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,13 +36,34 @@ body {
     height: 3vw;
 }
 
+.cart-button{
+    position: absolute;
+    right: 20px;
+    top: 0;
+    margin-top: 3vw;
+    z-index: 102;
+    background-color: rgba(0, 0, 0, 0);
+    height: 50px;
+    border: 0;
+    border-radius: 25px;
+    cursor: pointer;
+}
+
+.cart-button img {
+    height: 100%;
+}
+
+.cart-button:hover{
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
 .item-grid {
     width: 82vw;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 1.5vw;
     margin-left: 9vw;
-    margin-top: 20vw;
+    margin-top: 24vw;
 }
 .item {
     display: flex;
