--- a/templates/index.html
+++ b/templates/index.html
@@ -19,9 +19,9 @@
         </div>
 
         <div class="cart-icon">
-            <button class="cart-button">
+            <a href="cart/"><button class="cart-button">
                 <img src="/media/media/images/shop-icon.svg" alt="">
-            </button>
+            </button></a>
         </div>
     </div>
 
