--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,78 +1,20 @@
-body {
-    background-color: black;
-    margin: 0;
-    padding: 0;
-}
-
-.header {
-    position: fixed;
-    top: 0;
-}
-
-.header-img {
-    position: relative;
-    z-index: 100;
-    width: 100vw;
-}
-
-.header-img img {
-    position: absolute;
-    width: 100vw;
-    left: -10px;
-    top: -3vw;
-    z-index: 100;
-    scale: 120%;
-}
-
-.header-logo {
-    position: absolute;
-    left: 0;
-    top: 3vw;
-    width: 100vw;
-    z-index: 101;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    height: 3vw;
-}
-
-.cart-button{
-    position: absolute;
-    right: 20px;
-    top: 0;
-    margin-top: 3vw;
-    z-index: 102;
-    background-color: rgba(0, 0, 0, 0);
-    height: 50px;
-    border: 0;
-    border-radius: 25px;
-    cursor: pointer;
-}
-
-.cart-button img {
-    height: 100%;
-}
-
-.cart-button:hover{
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
 .item-grid {
     width: 82vw;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 1.5vw;
+    row-gap: 10px;
     margin-left: 9vw;
-    margin-top: 24vw;
+    margin-top: 20vw;
 }
+
 .item {
     display: flex;
     flex-direction: column;
-    row-gap: 0.5rem;
     background-color: white;
     border-radius: 20px;
     padding: 15px;
-    height: 290px;
+    height: 35vw;
 }
 
 .item-img {
@@ -86,7 +28,7 @@ body {
 
 .item-img img {
     border-radius: 10%;
-    width: 200px;
+    width: 20vw;
 }
 
 .item-info {
@@ -98,14 +40,15 @@ body {
 .item-info button {
     background-color: rgb(0, 0, 0);
     color: white;
-    width: 6vw;
-    height: 4vw;
+    width: 60px;
+    height: 40px;
     border: none;
     border-radius: 30%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     opacity: 1;
     transition: opacity 0.2s;
     font-family: Atkinson Hyperlegible Mono, Arial;
+    font-size: 9px;
     cursor: pointer;
 }
 
