--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                     <div>
                         <form method="post" action="{% url 'add_to_cart' item.id %}">
                             {% csrf_token  %}
-                            <button type="submit">Добавить в корзину</button>
+                            <button type="submit">buy</button>
                         </form>
                     </div>
                 </div>
