--- a/static/css/cart.css
+++ b/static/css/cart.css
@@ -46,17 +46,17 @@
 }
 
 .cart-item-info button {
+    margin-top: 2vw;
     background-color: rgb(0, 0, 0);
     color: white;
-    width: 60px;
-    height: 40px;
+    padding: 15px 10px;
     border: none;
     border-radius: 30%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     opacity: 1;
     transition: opacity 0.2s;
     font-family: Atkinson Hyperlegible Mono, Arial;
-    font-size: 10px;
+    font-size: 13px;
     cursor: pointer;
 }
 
@@ -72,8 +72,8 @@
     background-color: white;
     padding: 10px;
     border-radius: 20px;
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 25px;
+    font-weight: 550;
 }
 
 .cart-item-img img {
