--- a/static/css/index.css
+++ b/static/css/index.css
@@ -40,15 +40,14 @@
 .item-info button {
     background-color: rgb(0, 0, 0);
     color: white;
-    width: 60px;
-    height: 40px;
+    padding: 15px 12px;
     border: none;
     border-radius: 30%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     opacity: 1;
     transition: opacity 0.2s;
     font-family: Atkinson Hyperlegible Mono, Arial;
-    font-size: 9px;
+    font-size: 15px;
     cursor: pointer;
 }
 
