--- a/templates/index.html
+++ b/templates/index.html
@@ -15,11 +15,13 @@
             <img src="/media/media/images/top_wave.svg" alt="">
         </div>
         <div class="header-logo">
-            <img src="/media/media/images/youtube-logo — копия.svg" alt="">
+            <a href="/">
+                <img src="/media/media/images/youtube-logo — копия.svg" alt="">
+            </a>
         </div>
 
         <div class="cart-icon">
-            <a href="cart/"><button class="cart-button">
+            <a href="/cart"><button class="cart-button">
                 <img src="/media/media/images/shop-icon.svg" alt="">
             </button></a>
         </div>
