--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,11 +1,28 @@
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20vw;
+}
+
 .item-grid {
-    width: 82vw;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
     column-gap: 1.5vw;
     row-gap: 10px;
-    margin-left: 9vw;
-    margin-top: 20vw;
+}
+
+@media (min-width: 681px){
+    .item-grid {
+        width: 80vw;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (max-width: 680px) {
+    .item-grid {
+        width: 60vw;
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 .item {
