--- a/templates/index.html
+++ b/templates/index.html
@@ -26,26 +26,28 @@
             </button></a>
         </div>
     </div>
-    <div class="item-grid">
-        {% for item in items %}
-            <div class="item">
-                <div class="item-img">
-                    <img src="{{ item.image.url }}" alt="">
-                </div>
-                <div class="item-info">
-                    <div>
-                        <h1>{{ item.name }}</h1>
-                        <h2>{{ item.price }}</h2>
+    <div class="main">
+        <div class="item-grid">
+            {% for item in items %}
+                <div class="item">
+                    <div class="item-img">
+                        <img src="{{ item.image.url }}" alt="">
                     </div>
-                    <div>
-                        <form method="post" action="{% url 'add_to_cart' item.id %}">
-                            {% csrf_token  %}
-                            <button type="submit">buy</button>
-                        </form>
+                    <div class="item-info">
+                        <div>
+                            <h1>{{ item.name }}</h1>
+                            <h2>{{ item.price }}</h2>
+                        </div>
+                        <div>
+                            <form method="post" action="{% url 'add_to_cart' item.id %}">
+                                {% csrf_token  %}
+                                <button type="submit">buy</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
 </body>
 </html>
