--- a/static/css/general.css
+++ b/static/css/general.css
@@ -28,7 +28,6 @@ body {
     position: absolute;
     width: 100vw;
     margin-top: 3vw;
-    cursor: pointer;
     z-index: 102;
     display: flex;
     align-items: center;
@@ -41,7 +40,7 @@ body {
 
 .cart-button{
     position: absolute;
-    right: 20px;
+    right: 2.5vw;
     margin-top: 3vw;
     z-index: 102;
     background-color: rgba(0, 0, 0, 0);
@@ -49,6 +48,7 @@ body {
     border: none;
     border-radius: 25px;
     transition: background-color 0.2s;
+    cursor: pointer;
 }
 
 .cart-button img {
@@ -56,6 +56,5 @@ body {
 }
 
 .cart-button:hover {
-    cursor: pointer;
     background-color: rgba(0, 0, 0, 0.1);
 }
