--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,12 @@
             </button></a>
         </div>
     </div>
+    <div class="search">
+        <input class="search-text" type="text" placeholder="Search">
+        <button class="search-button">
+            <img src="/media/media/images/search.svg" alt="">
+        </button>
+    </div>
     <div class="main">
         <div class="item-grid">
             {% for item in items %}
