--- a/templates/search.html
+++ b/templates/search.html
@@ -5,17 +5,17 @@
     <title>Search {{ search_body }}</title>
 </head>
 <body>
-<h1>Результаты поиска по {{ search_body }}</h1>
-{% if search_results %}
-    {% for item in search_results %}
-        <h1>{{ item.name }}</h1>
-        <h1>{{ item.price }}</h1>
+<h1>Результаты поиска по "{{ search_body }}"</h1>
 
-    {% endfor %}
+{% if search_results %}
+    <ul>
+        {% for item in search_results %}
+            <li>{{ item.name }}</li>
+            <li>{{ item.price }}</li>
+        {% endfor %}
+    </ul>
 {% else %}
-<div>
-    <h1>По поиску {{ search_body }} ничего не найдено, попробуйте изменить запрос</h1>
-</div>
+    <p>Товары не найдены.</p>
 {% endif %}
 </body>
 </html>
