--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,21 @@
             </button></a>
         </div>
     </div>
+    
+    <div class="search">
+        <form method="get" action="{% url 'search' %}">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="search-button" type="submit">
+                <img src="/media/media/images/search.svg" alt="">
+            </button>
+        </form>
+        <!--<input class="search-text" type="text" placeholder="Search">
+        <button class="search-button">
+            <img src="/media/media/images/search.svg" alt="">
+        </button>-->
 
+    </div>
     <div class="main">
         <div class="item-grid">
             {% for item in items %}
@@ -49,18 +63,6 @@
                 </div>
             {% endfor %}
         </div>
-    </div>
-    <div class="search">
-        <form method="get" action="{% url 'search' %}">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Найти</button>
-        </form>
-        <!--<input class="search-text" type="text" placeholder="Search">
-        <button class="search-button">
-            <img src="/media/media/images/search.svg" alt="">
-        </button>-->
-
     </div>
 </body>
 </html>
