--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,8 @@
             {% for item in items %}
                 <div class="item">
                     <div class="item-img">
-                        <img src="{{ item.image.url }}" alt="">
+                        <a href="{% url 'item_card' item.id %}"><img src="{{ item.image.url }}" alt=""></a>
+
                     </div>
                     <div class="item-info">
                         <div>
