--- a/templates/index.html
+++ b/templates/index.html
@@ -36,29 +36,28 @@
             </button>
         </form>
     </div>
-    <div class="main">
-        <div class="item-grid">
-            {% for item in items %}
-                <div class="item">
-                    <div class="item-img">
-                        <a href="{% url 'item_card' item.id %}"><img src="{{ item.image.url }}" alt=""></a>
-
+    <div class="item-grid">
+        {% for item in items %}
+            <div class="item">
+                <div class="item-img">
+                    <a href="{% url 'item_card' item.id %}">
+                        <img src="{{ item.image.url }}" alt="">
+                    </a>
+                </div>
+                <div class="item-info">
+                    <div>
+                        <h1>{{ item.name }}</h1>
+                        <h2>{{ item.price }}</h2>
                     </div>
-                    <div class="item-info">
-                        <div>
-                            <h1>{{ item.name }}</h1>
-                            <h2>{{ item.price }}</h2>
-                        </div>
-                        <div>
-                            <form method="post" action="{% url 'add_to_cart' item.id %}">
-                                {% csrf_token  %}
-                                <button type="submit">buy</button>
-                            </form>
-                        </div>
+                    <div>
+                        <form method="post" action="{% url 'add_to_cart' item.id %}">
+                            {% csrf_token  %}
+                            <button type="submit">buy</button>
+                        </form>
                     </div>
                 </div>
-            {% endfor %}
-        </div>
+            </div>
+        {% endfor %}
     </div>
 </body>
 </html>
