--- a/templates/item.html
+++ b/templates/item.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Item</title>
-</head>
-<body>
-{{ item.name }}
-{{ item.price }}
-{{ item.description }}
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="/static/css/general.css">
+        <link rel="stylesheet" href="/static/css/item.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <title>Item</title>
+    </head>
+    <body>
+        <div class="header">
+            <div class="header-img">
+                <img src="/media/media/images/top_wave.svg" alt="">
+            </div>
+            <div class="header-logo">
+                <a href="/">
+                    <img src="/media/media/images/youtube-logo — копия.svg" alt="">
+                </a>
+            </div>
+    
+            <div class="cart-icon">
+                <a href="/cart"><button class="cart-button">
+                    <img src="/media/media/images/shop-icon.svg" alt="">
+                </button></a>
+            </div>
+        </div>
+
+        <div class="main">
+            <div class="item">
+                <div class="item-img">
+                    <a href="{% url 'item_card' item.id %}">
+                        <img src="{{ item.image.url }}" alt="">
+                    </a>
+                </div>
+                <div class="item-info">
+                    <div>
+                        <h1>{{ item.name }}</h1>
+                        <h2>{{ item.price }}</h2>
+                    </div>
+                    <div>
+                        <form method="post" action="{% url 'add_to_cart' item.id %}">
+                            {% csrf_token  %}
+                            <button type="submit">buy</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            {{ item.description }}
+        </div>
+    </body>
 </html>
