--- a/static/css/index.css
+++ b/static/css/index.css
@@ -9,50 +9,52 @@
     display: none;
 }
 /* аопопоппввап */
-form {
+.search form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3vw;
+}
+
+.search form p {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 30vw;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .search-text {
-    min-width: 30vw;
-    height: 3vw;
+    width: calc(100% - 1vw);
+    height: 100%;
     padding-top: 0;
     padding-bottom: 0;
-    padding-left: 1vw;
-    font-size: 1.3vw;
+    padding-left: 5%;
+    padding-right: 0;
+    font-size: clamp(0.5rem, 1.5vw, 1.5rem);
     font-family: Atkinson Hyperlegible Mono, Arial;
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(200, 200, 200);
+    border: none;
     border-top-left-radius: 1vw;
     border-bottom-left-radius: 1vw;
-    box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.1);
-}
-
-.search-text p {
-    margin: 0;
-    padding: 0;
 }
 
 .search-button {
     width: 4vw;
-    height: calc(3vw + 2px);
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.2vw 0.5vw;
     background-color: rgb(240, 240, 240);
-    border: 1px solid rgb(200, 200, 200);
-    margin-left: -1px;
+    border: min(1px, 0.15vw) solid rgb(200, 200, 200);
     border-top-right-radius: 1vw;
     border-bottom-right-radius: 1vw;
 }
 
 .search-button img {
     height: 100%;
-}
-
-search-text::placeholder {
-    font-family: Atkinson Hyperlegible Mono, Arial;
-    font-size: 16px;
 }
 
 .search-result {
