--- a/templates/item.html
+++ b/templates/item.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="/static/css/general.css">
         <link rel="stylesheet" href="/static/css/item.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
