нормальная верстка при пустой корзине, я спать

--- a/static/css/cart.css
+++ b/static/css/cart.css
@@ -78,3 +78,58 @@
 .cart-item-img img {
     width: 20vw;
 }
+
+.empty-cart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    width: 90vw;
+    height: 300px;
+    border-radius: 1vw;
+    background-color: white;
+    box-shadow: 0 0 50px rgba(200, 200, 200, 0.5),
+        inset -5px -5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.empty-cart-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    row-gap: 20px;
+    max-width: 20vw;
+}
+
+.empty-cart-info h1 {
+    margin: 0;
+}
+
+.empty-cart-info p {
+    margin: 0;
+    font-size: 1.7vw;
+    color: gray;
+}
+
+.empty-cart-info a {
+    text-decoration: none;
+    background-color: black;
+    padding: 20px 40px;
+    border-radius: 1vw;
+    margin-top: 10px;
+    color: white;
+    font-size: 1.7vw;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5),
+        inset -3px -3px 5px rgba(200, 200, 200, 0.5);
+    transition: opacity 0.15s;
+}
+
+.empty-cart-info a:hover {
+    opacity: 0.8;
+}
+
+.empty-cart-info a:active {
+    opacity: 0.5;
+}
