--- a/static/css/cart.css
+++ b/static/css/cart.css
@@ -86,11 +86,13 @@
     margin-left: 5vw;
     margin-right: 5vw;
     width: 90vw;
-    height: 300px;
     border-radius: 1vw;
     background-color: white;
-    box-shadow: 0 0 50px rgba(200, 200, 200, 0.5),
-        inset -5px -5px 10px rgba(0, 0, 0, 0.5);
+    height: 15vw;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
+    box-shadow: 0 0 5vw rgba(200, 200, 200, 0.4),
+        inset -0.5vw -0.5vw 1vw rgba(0, 0, 0, 0.4);
 }
 
 .empty-cart-info {
@@ -99,31 +101,31 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    row-gap: 20px;
-    max-width: 20vw;
+    row-gap: 1.5vw;
 }
 
 .empty-cart-info h1 {
     margin: 0;
+    font-size: clamp(0.8rem, 2.3vw, 3.5rem);
 }
 
 .empty-cart-info p {
     margin: 0;
-    font-size: 1.7vw;
+    font-size: clamp(0.4rem, 1.3vw, 2.2rem);
     color: gray;
 }
 
 .empty-cart-info a {
     text-decoration: none;
     background-color: black;
-    padding: 20px 40px;
+    padding: 1vw 2vw;
     border-radius: 1vw;
-    margin-top: 10px;
+    margin-top: 0.5vw;
     color: white;
-    font-size: 1.7vw;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5),
-        inset -3px -3px 5px rgba(200, 200, 200, 0.5);
-    transition: opacity 0.15s;
+    font-size: clamp(0.4rem, 1.3vw, 2.2rem);
+    box-shadow: 0 0 2vw rgba(0, 0, 0, 0.4),
+                inset -0.3vw -0.3vw 0.5vw rgba(200, 200, 200, 0.4);
+    transition: all 0.2s;
 }
 
 .empty-cart-info a:hover {
@@ -131,5 +133,20 @@
 }
 
 .empty-cart-info a:active {
-    opacity: 0.5;
+    transform: scale(90%);
+}
+
+.cart-main input{
+    background-color: white;
+    padding: 1vw;
+    font-size: 2rem;
+    font-weight: 550;
+    margin-top: 2vw;
+    border: none;
+    border-radius: 3vw;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    opacity: 1;
+    transition: opacity 0.2s;
+    font-family: Atkinson Hyperlegible Mono, Arial;
+    cursor: pointer;
 }
