--- a/static/css/index.css
+++ b/static/css/index.css
@@ -34,7 +34,7 @@
     padding-left: 5%;
     padding-right: 0;
     font-size: clamp(0.5rem, 1.5vw, 1.5rem);
-    font-family: Atkinson Hyperlegible Mono, Arial;
+    font-family: "Unbounded", "Arial";
     border: none;
     border-top-left-radius: 1vw;
     border-bottom-left-radius: 1vw;
@@ -71,7 +71,7 @@
 }
 
 .search-result-title h1 {
-    font-family: Atkinson Hyperlegible Mono, Arial;
+    font-family: "Unbounded", "Arial";
     font-size: 2vw;
     margin: 0;
 }
@@ -92,6 +92,8 @@
     display: flex;
     flex-direction: column;
     background-color: white;
+    box-shadow: 0 0 5vw rgba(200, 200, 200, 0.3),
+        inset -0.5vw -0.5vw 0.5vw rgba(0, 0, 0, 0.3);
 }
 
 @media (min-width: 2301px) {
@@ -256,7 +258,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     opacity: 1;
     transition: opacity 0.2s;
-    font-family: Atkinson Hyperlegible Mono, Arial;
+    font-family: "Unbounded", "Arial";
     cursor: pointer;
 }
 
@@ -272,5 +274,13 @@
 .item-info h2 {
     margin: 0;
     font-weight: 500;
-    font-family: Atkinson Hyperlegible Mono, Arial;
+    font-family: "Unbounded", "Arial";
+}
+
+.item-info h2 {
+    color: rgb(100, 100, 100);
+}
+
+.item-info h2:after {
+    content: "₽";
 }
