--- a/templates/search.html
+++ b/templates/search.html
@@ -1,88 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="/static/css/general.css">
-        <link rel="stylesheet" href="/static/css/index.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <title>Search {{ search_body }}</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/static/css/general.css">
+    <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
+    <title>Search {{ search_body }}</title>
+</head>
 
-    <body>
-        <div class="header">
-            <div class="header-img">
-                <img src="/media/media/images/top_wave.svg" alt="">
-            </div>
-            <div class="header-logo">
-                <a href="/">
-                    <img src="/media/media/images/youtube-logo — копия.svg" alt="">
-                </a>
-            </div>
-    
-            <div class="cart-icon">
-                <a href="/cart"><button class="cart-button">
-                    <img src="/media/media/images/shop-icon.svg" alt="">
-                </button></a>
-            </div>
+<body>
+    <div class="header">
+        <div class="header-img">
+            <img src="/media/media/images/top_wave.svg" alt="">
+        </div>
+        <div class="header-logo">
+            <a href="/">
+                <img src="/media/media/images/youtube-logo — копия.svg" alt="">
+            </a>
         </div>
 
-        <div class="search-result">
+        <div class="cart-icon">
+            <a href="/cart"><button class="cart-button">
+                <img src="/media/media/images/shop-icon.svg" alt="">
+            </button></a>
+        </div>
+    </div>
+
+    <div class="search-result">
+        <div class="search-result-title">
+            <h1>Результаты поиска по "{{ search_body }}"</h1>
+        </div>
+    </div>
+
+    <div class="main">
+        {% if search_results %}
+            <div class="item-grid">
+                {% for item in search_results %}
+                    <div class="item">
+                        <div class="item-img">
+                            <img src="{{ item.image.url }}" alt="">
+                        </div>
+                        <div class="item-info">
+                            <div>
+                                <h1>{{ item.name }}</h1>
+                                <h2>{{ item.price }}</h2>
+                            </div>
+                            <div>
+                                <form method="post" action="{% url 'add_to_cart' item.id %}">
+                                    {% csrf_token  %}
+                                    <button type="submit">buy</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        {% else %}
+            <p>Товары не найдены.</p>
+        {% endif %}
+    </div>
+    <!--
+    <div class="main">
+        <div class="main-search">
             <div class="search-result-title">
                 <h1>Результаты поиска по "{{ search_body }}"</h1>
             </div>
-        </div>
-
-        <div class="main">            
             {% if search_results %}
-                <div class="item-grid">
+                <div class="search-result">
                     {% for item in search_results %}
-                        <div class="item">
-                            <div class="item-img">
-                                <img src="{{ item.image.url }}" alt="">
-                            </div>
-                            <div class="item-info">
-                                <div>
-                                    <h1>{{ item.name }}</h1>
-                                    <h2>{{ item.price }}</h2>
-                                </div>
-                                <div>
-                                    <form method="post" action="{% url 'add_to_cart' item.id %}">
-                                        {% csrf_token  %}
-                                        <button type="submit">buy</button>
-                                    </form>
-                                </div>
-                            </div>
+                        <div class="search-item">
+                            <div>{{ item.name }}</div>
+                            <div class="item-price">{{ item.price }} <button>buy</button></div>
                         </div>
                     {% endfor %}
                 </div>
             {% else %}
                 <p>Товары не найдены.</p>
             {% endif %}
-        </div>
-        <!--
-        <div class="main">
-            <div class="main-search">
-                <div class="search-result-title">
-                    <h1>Результаты поиска по "{{ search_body }}"</h1>
-                </div>
-                {% if search_results %}
-                    <div class="search-result">
-                        {% for item in search_results %}
-                            <div class="search-item">
-                                <div>{{ item.name }}</div>
-                                <div class="item-price">{{ item.price }} <button>buy</button></div>
-                            </div>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    <p>Товары не найдены.</p>
-                {% endif %}
-                </div>
             </div>
         </div>
-        -->
-    </body>
+    </div>
+    -->
+</body>
 </html>
