--- a/static/css/cart.css
+++ b/static/css/cart.css
@@ -1,7 +1,7 @@
 .cart-main {
     display: flex;
     justify-content: space-between;
-    align-items: end;
+    align-items: start;
     margin-left: 3vw;
     margin-top: 20vw;
     width: 94vw;
@@ -12,35 +12,33 @@
     width: 60vw;
     display: grid;
     grid-template-columns: 1fr;
-    row-gap: 15px;
+    row-gap: 2vw;
+    border-radius: 5vw;
 }
 
 .cart-item {
     background-color: white;
-    border-radius: 35px;
+    border-radius: 2vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
-}
-
-.cart-item button {
-    font-family: "Unbounded", "Arial";
+    padding: 2vw;
+    box-shadow: 0 0 5vw rgba(200, 200, 200, 0.4),
+        inset -0.5vw -0.5vw 1vw rgba(0, 0, 0, 0.4);
 }
 
 .cart-item-img {
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 
 .cart-item-info {
-    margin-top: 10px;
-    font-size: 30px;
-    font-family: "Unbounded", "Arial";
-    font-weight: 500;
-    flex: 1;
+    flex: 0.9;
+    height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
@@ -48,31 +46,80 @@
     margin-top: 2vw;
     background-color: rgb(0, 0, 0);
     color: white;
-    padding: 15px 10px;
+    padding: 1.5vw 1vw;
     border: none;
-    border-radius: 30%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 1.5vw;
+    box-shadow: 0 0 2vw rgba(0, 0, 0, 0.4),
+        inset -0.5vw -0.5vw 0.5vw rgba(200, 200, 200, 0.3);
     opacity: 1;
-    transition: opacity 0.2s;
+    transition: opacity 0.2s, transform 0.2s;
     font-family: "Unbounded", "Arial";
-    font-size: 13px;
+    font-size: clamp(0.4rem, 1.2vw, 2rem);
     cursor: pointer;
 }
 
 .cart-item-info button:hover {
-    opacity: 0.7;
+    opacity: 0.8;
 }
 
 .cart-item-info button:active {
-    opacity: 0.5;
+    transform: scale(90%);
+}
+
+.cart-item-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 1vw;
+    font-size: clamp(0.5rem, 1.5vw, 2.5rem);
+    font-family: "Unbounded", "Arial";
+    font-weight: 500;
+}
+
+.cart-result {
+    background-color: white;
+    padding: 1.5vw;
+    border-radius: 2vw;
+    font-weight: 550;
+    box-shadow: 0 0 5vw rgba(200, 200, 200, 0.4),
+        inset -0.5vw -0.5vw 1vw rgba(0, 0, 0, 0.4);
+}
+
+.cart-result form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cart-result form input {
+    margin-top: 2vw;
+    background-color: black;
+    color: white;
+    padding: 1.5vw 1vw;
+    border: none;
+    border-radius: 5vw;
+    transition: opacity 0.2s, transform 0.2s;
+    font-family: "Unbounded", "Arial";
+    font-size: clamp(0.4rem, 1vw, 1.8rem);
+    cursor: pointer;
+    box-shadow: 0.3vw 0.3vw 1vw rgba(0, 0, 0, 0.3),
+        inset -0.5vw -0.5vw 0.5vw rgba(200, 200, 200, 0.2);
+}
+
+.cart-result form input:hover {
+    opacity: 0.8;
+}
+
+.cart-result form input:active {
+    transform: scale(95%);
 }
 
 .cost {
-    background-color: white;
-    padding: 10px;
-    border-radius: 20px;
-    font-size: 25px;
-    font-weight: 550;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: clamp(0.4rem, 1.3vw, 2.3rem);
+    width: 20vw;
 }
 
 .cart-item-img img {
@@ -125,7 +172,7 @@
     font-size: clamp(0.4rem, 1.3vw, 2.2rem);
     box-shadow: 0 0 2vw rgba(0, 0, 0, 0.4),
                 inset -0.3vw -0.3vw 0.5vw rgba(200, 200, 200, 0.4);
-    transition: all 0.2s;
+    transition: opacity 0.2s, transform 0.2s;
 }
 
 .empty-cart-info a:hover {
