--- a/static/css/general.css
+++ b/static/css/general.css
@@ -48,7 +48,7 @@ body {
     padding: 0;
     border: none;
     border-radius: 25px;
-    transition: all 0.2s;
+    transition: opacity 0.2s, transform 0.2s;
     cursor: pointer;
 }
 
