--- a/static/css/index.css
+++ b/static/css/index.css
@@ -93,7 +93,7 @@
     flex-direction: column;
     background-color: white;
     box-shadow: 0 0 5vw rgba(200, 200, 200, 0.3),
-        inset -0.5vw -0.5vw 0.5vw rgba(0, 0, 0, 0.3);
+        inset -0.5vw -0.5vw 0.5vw rgba(0, 0, 0, 0.2);
 }
 
 @media (min-width: 2301px) {
@@ -112,9 +112,9 @@
     }
 
     .item-info button {
-        padding: 1.7rem 1.5rem;
+        padding: 2rem 1.5rem;
         font-size: 1.7rem;
-        border-radius: 1.7rem;
+        border-radius: 2rem;
     }
 }
 
@@ -255,7 +255,7 @@
     background-color: rgb(0, 0, 0);
     color: white;
     border: none;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 1vw rgba(0, 0, 0, 0.5);
     opacity: 1;
     transition: opacity 0.2s;
     font-family: "Unbounded", "Arial";
@@ -279,8 +279,4 @@
 
 .item-info h2 {
     color: rgb(100, 100, 100);
-}
-
-.item-info h2:after {
-    content: "₽";
 }
