--- a/static/css/item.css
+++ b/static/css/item.css
@@ -1,100 +1,24 @@
 .main {
     margin-top: 19vw;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 2vw;
+    background-color: white;
+    width: 60vw;
+    height: 23vw;
+    margin-left: 20vw;
+    margin-right: 20vw;
+    border-radius: 3vw;
+    box-shadow: 0 0 5vw rgba(200, 200, 200, 0.3),
+        inset -0.5vw -0.5vw 0.5vw rgba(0, 0, 0, 0.2)
 }
 
 .item {
     display: flex;
     flex-direction: column;
-    background-color: white;
-}
-
-@media (min-width: 1451px) {
-    .item {
-        min-width: 300px;
-        max-width: 300px;
-        min-height: 550px;
-        max-height: 550px;
-        padding: 20px;
-        border-radius: 30px;
-    }
-
-    .item-info h1,
-    .item-info h2 {
-        font-size: 1.7rem;
-    }
-
-    .item-info button {
-        padding: 1.2rem 1rem;
-        font-size: 1.5rem;
-        border-radius: 1.5rem;
-    }
-}
-
-@media (min-width: 901px) and (max-width: 1450px) {
-    .item {
-        min-width: 200px;
-        max-width: 200px;
-        min-height: 350px;
-        max-height: 350px;
-        padding: 15px;
-        border-radius: 25px;
-    }
-
-    .item-info h1,
-    .item-info h2 {
-        font-size: 1.1rem;
-    }
-
-    .item-info button {
-        padding: 0.9rem 0.7rem;
-        font-size: 1rem;
-        border-radius: 1rem;
-    }
-}
-
-@media (min-width: 601px) and (max-width: 900px) {
-    .item {
-        min-width: 120px;
-        max-width: 120px;
-        min-height: 220px;
-        max-height: 220px;
-        padding: 13px;
-        border-radius: 25px;
-    }
-
-    .item-info h1,
-    .item-info h2 {
-        font-size: 0.7rem;
-    }
-
-    .item-info button {
-        padding: 0.7rem 0.5rem;
-        font-size: 0.7rem;
-        border-radius: 0.9rem;
-    }
-}
-
-@media (max-width: 600px) {
-    .item {
-        min-width: 85px;
-        max-width: 85px;
-        min-height: 155px;
-        max-height: 155px;
-        padding: 11px;
-    }
-
-    .item-info h1,
-    .item-info h2 {
-        font-size: 0.45rem;
-    }
-
-    .item-info button {
-        padding: 0.5rem 0.4rem;
-        font-size: 0.5rem;
-        border-radius: 0.6rem;
-    }
+    width: 14vw;
+    height: 100%;
+    border-radius: 30px;
 }
 
 .item-img {
@@ -124,11 +48,14 @@
     background-color: rgb(0, 0, 0);
     color: white;
     border: none;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 0.5vw rgba(0, 0, 0, 0.5);
     opacity: 1;
     transition: opacity 0.2s;
     font-family: "Unbounded", "Arial";
     cursor: pointer;
+    padding: 1.3vw 1vw;
+    font-size: clamp(0.3rem, 1vw, 1.8rem);
+    border-radius: 1.5vw;
 }
 
 .item-info button:hover {
@@ -144,4 +71,18 @@
     margin: 0;
     font-weight: 500;
     font-family: "Unbounded", "Arial";
+    font-size: clamp(0.3rem, 1vw, 1.7rem);
+}
+
+.item-info h2 {
+    color: rgb(100, 100, 100);
+}
+
+.item-desc {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 43vw;
+    font-family: "Unbounded", "Arial";
+    font-size:clamp(0.3rem, 1.1vw, 2rem);
 }
