--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                 <div class="item-info">
                     <div>
                         <h1>{{ item.name }}</h1>
-                        <h2>{{ item.price }}</h2>
+                        <h2>{{ item.price }} ₽</h2>
                     </div>
                     <div>
                         <form method="post" action="{% url 'add_to_cart' item.id %}">
